--- a/AstronomyOBJC/AstronomyOBJC/Base.lproj/Main.storyboard
+++ b/AstronomyOBJC/AstronomyOBJC/Base.lproj/Main.storyboard
@@ -1,82 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EFN-Rn-7v7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Collection View Controller-->
-        <scene sceneID="Pb4-wy-gXQ">
-            <objects>
-                <collectionViewController id="ePz-9a-RhO" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="eCd-Is-SLt">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="IVb-tr-JD0">
-                            <size key="itemSize" width="128" height="128"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Hxb-df-ffh">
-                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ZFh-z7-ZFc">
-                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </collectionViewCellContentView>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="ePz-9a-RhO" id="ENq-NK-wJm"/>
-                            <outlet property="delegate" destination="ePz-9a-RhO" id="yyh-1W-82C"/>
-                        </connections>
-                    </collectionView>
-                    <navigationItem key="navigationItem" id="y3W-zq-uel"/>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="GaW-bi-Jg4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="268" y="118"/>
-        </scene>
         <!--Mars Photo Detail View Controller-->
-        <scene sceneID="v0x-iN-QLf">
+        <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="EFN-Rn-7v7" customClass="MarsPhotoDetailViewController" customModule="AstronomyOBJC" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="R2C-Dv-CEa">
+                <viewController id="BYZ-38-t0r" customClass="MarsPhotoDetailViewController" customModule="AstronomyOBJc" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lt9-Ty-acu">
-                                <rect key="frame" x="0.0" y="129" width="414" height="359"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="359" id="2tf-11-WsX"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qbV-BP-PQO">
+                                <rect key="frame" x="0.0" y="128" width="414" height="293"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="lMB-Le-f75">
-                                <rect key="frame" x="78.5" y="562" width="257.5" height="71"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="3sI-d5-aSO">
+                                <rect key="frame" x="25" y="524" width="364" height="93"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taken by _ on _, (sol _)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iak-yY-pDC">
-                                        <rect key="frame" x="0.0" y="0.0" width="257.5" height="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taken by _ on _, (sol _)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vyd-0n-SpT">
+                                        <rect key="frame" x="0.0" y="0.0" width="364" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="kET-tY-tmR">
-                                        <rect key="frame" x="0.0" y="41" width="257.5" height="30"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="8nN-K9-JpJ">
+                                        <rect key="frame" x="0.0" y="63" width="364" height="30"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dis-X3-NWn">
-                                                <rect key="frame" x="0.0" y="0.0" width="91.5" height="30"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Camera:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e2C-J3-Rpv">
+                                                <rect key="frame" x="0.0" y="0.0" width="198" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mast Camera" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gmV-V0-4eW">
-                                                <rect key="frame" x="113.5" y="0.0" width="144" height="30"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mast Camera" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ooo-T5-wcT">
+                                                <rect key="frame" x="220" y="0.0" width="144" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -85,50 +47,24 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ena-qP-Pbh">
-                                <rect key="frame" x="132" y="734" width="150" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Save To Photo Library"/>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="lMB-Le-f75" firstAttribute="top" secondItem="lt9-Ty-acu" secondAttribute="bottom" constant="74" id="U1j-NV-tKj"/>
-                            <constraint firstItem="lt9-Ty-acu" firstAttribute="leading" secondItem="04D-Sp-xSK" secondAttribute="leading" id="dHZ-CL-P7f"/>
-                            <constraint firstItem="lt9-Ty-acu" firstAttribute="trailing" secondItem="04D-Sp-xSK" secondAttribute="trailing" id="oWP-km-dQo"/>
-                            <constraint firstItem="lt9-Ty-acu" firstAttribute="centerX" secondItem="lMB-Le-f75" secondAttribute="centerX" id="qtF-Hg-Sph"/>
-                            <constraint firstItem="lt9-Ty-acu" firstAttribute="top" secondItem="04D-Sp-xSK" secondAttribute="top" constant="85" id="vYZ-j3-Eaj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3sI-d5-aSO" secondAttribute="trailing" constant="25" id="8q5-En-6c3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="3sI-d5-aSO" secondAttribute="bottom" constant="245" id="9oH-iq-wpn"/>
+                            <constraint firstItem="3sI-d5-aSO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="25" id="Vtj-O9-ss4"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="04D-Sp-xSK"/>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="V7y-dg-Vhx"/>
                     <connections>
-                        <outlet property="cameraUsedLabel" destination="gmV-V0-4eW" id="Msb-Kb-FQG"/>
-                        <outlet property="imageView" destination="lt9-Ty-acu" id="Zw3-2p-dxf"/>
-                        <outlet property="photoDetailLabel" destination="Iak-yY-pDC" id="tXv-S3-2IL"/>
+                        <outlet property="cameraTypeLabel" destination="Ooo-T5-wcT" id="RQy-ba-jvI"/>
+                        <outlet property="imageView" destination="qbV-BP-PQO" id="Rio-fD-VFD"/>
+                        <outlet property="solDetailLabel" destination="vyd-0n-SpT" id="BMp-SJ-Jz5"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="L0E-qw-pQf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1098.5507246376812" y="117.85714285714285"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="1EH-Ol-nLk">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gIM-xn-Eb2" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gwi-bh-asZ">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="ePz-9a-RhO" kind="relationship" relationship="rootViewController" id="04q-P0-w8T"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OOs-bw-E3N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-465.21739130434787" y="117.85714285714285"/>
+            <point key="canvasLocation" x="137.68115942028987" y="115.84821428571428"/>
         </scene>
     </scenes>
 </document>
