--- a/AstronomyOBJC/AstronomyOBJC/Base.lproj/Main.storyboard
+++ b/AstronomyOBJC/AstronomyOBJC/Base.lproj/Main.storyboard
@@ -41,32 +41,7 @@
                             <outlet property="delegate" destination="MVY-Pk-Q57" id="ePU-4q-1pY"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="Pcq-4R-MFM">
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="jyl-sA-Qb8">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4fa-wm-g2L">
-                                <rect key="frame" x="20" y="7" width="92" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                            </button>
-                            <connections>
-                                <action selector="previousSolButtonTapped:" destination="MVY-Pk-Q57" id="Jim-1x-gpm"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="JQa-8K-K4c">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="hnf-F4-eh0">
-                                <rect key="frame" x="302" y="7" width="92" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                            </button>
-                            <connections>
-                                <action selector="nextSolButtonTapped:" destination="MVY-Pk-Q57" id="eAL-79-YhY"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <connections>
-                        <outlet property="nextSolButton" destination="JQa-8K-K4c" id="CP6-KW-OZ1"/>
-                        <outlet property="previousSolButton" destination="jyl-sA-Qb8" id="LJ2-9c-odd"/>
-                    </connections>
+                    <navigationItem key="navigationItem" id="Pcq-4R-MFM"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3ru-SS-XGJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
